src/objects/Robot_Session__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Session_Key__c</fullName>
        <label>Session Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPaired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPaired</label>
        <type>Checkbox</type>
    </fields>
    <label>Robot Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Robot Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Robot Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>